--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,10 @@ name = "pypi"
 nltk = "*"
 
 [dev-packages]
+pytest = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
 
 [scripts]
 test = "python -m pytest"
